Bone Rorate Individual Axes fail #68145

Closed
opened 2019-08-02 19:37:42 +02:00 by Everton Schneider · 11 comments

System Information
Operating system: Linux-5.0.0-20-generic-x86_64-with-Ubuntu-19.04-disco 64 Bits
Graphics card: GeForce GTX 980 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.26

Blender Version
version: 2.81 (sub 1), branch: master, commit date: 2019-08-02 15:25, hash: dda0de4a3d, type: Release
build date: 2019-08-02, 13:01:41

Short description of error
The local axis rotation of multiple bones at same time are not working in individual origin mode.

Exact steps for others to reproduce the error
Open attached file and press R and X(2x) for local rotation mode and move the mouse. The bones are rotating together on some axis that I can't identify... They should rotate on each local X axis as always...

RorateIndividualAxes.blend

System Information Operating system: Linux-5.0.0-20-generic-x86_64-with-Ubuntu-19.04-disco 64 Bits Graphics card: GeForce GTX 980 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.26 Blender Version version: 2.81 (sub 1), branch: master, commit date: 2019-08-02 15:25, hash: dda0de4a3d09, type: Release build date: 2019-08-02, 13:01:41 Short description of error The local axis rotation of multiple bones at same time are not working in individual origin mode. Exact steps for others to reproduce the error Open attached file and press R and X(2x) for local rotation mode and move the mouse. The bones are rotating together on some axis that I can't identify... They should rotate on each local X axis as always... [RorateIndividualAxes.blend](https://archive.blender.org/developer/F7646111/RorateIndividualAxes.blend)

Added subscriber: @EvertonSchneider

Added subscriber: @EvertonSchneider

Added subscriber: @matc

Added subscriber: @matc

Looks like this on windows.

bones.png

Does it look different for you when you rotate by 135° in the way you described?

Looks like this on windows. ![bones.png](https://archive.blender.org/developer/F7646945/bones.png) Does it look different for you when you rotate by 135° in the way you described?

Looks like you have a working build...
Here I have this result with 135°:

Screenshot from 2019-08-03 10-35-15.png

Am I doing something wrong? But I always used this method to rotate various bones at the same time on their local axis... It's not working here anymore...

EDIT: I build another fresh build right now and the problem persists...

Looks like you have a working build... Here I have this result with 135°: ![Screenshot from 2019-08-03 10-35-15.png](https://archive.blender.org/developer/F7647246/Screenshot_from_2019-08-03_10-35-15.png) Am I doing something wrong? But I always used this method to rotate various bones at the same time on their local axis... It's not working here anymore... EDIT: I build another fresh build right now and the problem persists...

I also tried with a build bot build from today and I have the same issue with objects also.
Note the red lines indicating that I'm in the local axis rotation mode but it not happening... They rotate in global.

Screenshot from 2019-08-03 10-57-57.png

I also tried with a build bot build from today and I have the same issue with objects also. Note the red lines indicating that I'm in the local axis rotation mode but it not happening... They rotate in global. ![Screenshot from 2019-08-03 10-57-57.png](https://archive.blender.org/developer/F7647265/Screenshot_from_2019-08-03_10-57-57.png)

I also tried the attached file with the 2.80 official release from the blender.org site and it works as expected:

Screenshot from 2019-08-03 11-06-40.png

There is something weird not only for bones but for the general local axis manipulation.

I also tried the attached file with the 2.80 official release from the blender.org site and it works as expected: ![Screenshot from 2019-08-03 11-06-40.png](https://archive.blender.org/developer/F7647270/Screenshot_from_2019-08-03_11-06-40.png) There is something weird not only for bones but for the general local axis manipulation.

Added subscriber: @mont29

Added subscriber: @mont29

Sorry, my bad. I thought the problem was in 2.80. I can now see something is messed up with the axis in 2.81.

@mont29 In cee484a4c5 something went wrong.

Looks like this could solve the problem:

diff --git a/source/blender/editors/transform/transform.c b/source/blender/editors/transform/transform.c
index 973c1c0b7f7..9897a0be25e 100644
--- a/source/blender/editors/transform/transform.c
+++ b/source/blender/editors/transform/transform.c
@@ -4647,7 +4647,7 @@ static void applyRotationValue(TransInfo *t,
         }
         axis_angle_normalized_to_mat3(mat, axis, angle_final);
       }
-      else if (angle_final != angle) {
+      else {
         axis_angle_normalized_to_mat3(mat, axis, angle_final);
       }
       ElementRotation(t, tc, td, mat, t->around);


Sorry, my bad. I thought the problem was in 2.80. I can now see something is messed up with the axis in 2.81. @mont29 In cee484a4c51a3d2 something went wrong. Looks like this could solve the problem: ``` diff --git a/source/blender/editors/transform/transform.c b/source/blender/editors/transform/transform.c index 973c1c0b7f7..9897a0be25e 100644 --- a/source/blender/editors/transform/transform.c +++ b/source/blender/editors/transform/transform.c @@ -4647,7 +4647,7 @@ static void applyRotationValue(TransInfo *t, } axis_angle_normalized_to_mat3(mat, axis, angle_final); } - else if (angle_final != angle) { + else { axis_angle_normalized_to_mat3(mat, axis, angle_final); } ElementRotation(t, tc, td, mat, t->around); ```

This issue was referenced by 58229b191a

This issue was referenced by 58229b191a177ec0192786df005c9b586991c43a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Bastien Montagne self-assigned this 2019-08-05 15:47:59 +02:00

Thanks for the fix, Bastien Montagne! It's working as always now.
I'm so glad! The blender support is amazing because of you guys.

Thanks for the fix, Bastien Montagne! It's working as always now. I'm so glad! The blender support is amazing because of you guys.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68145
No description provided.