Fix T68145: Bone Rotate Individual Axes fail.

Rotation matrix would not get updated every time it would need to, after
own changes to handle 'big' rotations from keyboard input (rBcee484a4c51a3d2).